--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="lbl_age">Age</string>
     <string name="unit_cm">cm</string>
     <string name="lbl_height">Height</string>
+    <string name="advice_stay_active">Stay active</string>
+    <string name="advice_healthy_diet">Choose a healthy diet</string>
+    <string name="advice_sufficient_sleep">Ensure you get sufficient sleep</string>
+    <string name="result_more_info">More info</string>
+    <string name="normal_result_maintain_healthy_message">To maintain your healthy weight:</string>
+    <string name="normal_result_weight">Your weight is normal</string>
+    <string name="your_bmi_prepend">\"Your BMI = \"</string>
 </resources>
