--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="result_more_info">More info</string>
     <string name="normal_result_maintain_healthy_message">To maintain your healthy weight:</string>
     <string name="normal_result_weight">Your weight is normal</string>
+    <string name="normal_top_bar_result">Great, your BMI is normal range</string>
     <string name="your_bmi_prepend">\"Your BMI = \"</string>
 </resources>
