--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="advice_healthy_diet">Choose a healthy diet</string>
     <string name="advice_sufficient_sleep">Ensure you get sufficient sleep</string>
     <string name="result_more_info">More info</string>
-    <string name="normal_result_maintain_healthy_message">To maintain your healthy weight:</string>
+    <string name="normal_result_maintain_message">To maintain your healthy weight:</string>
+    <string name="underweight_result_maintain_message">You need to eat more:</string>
     <string name="normal_result_weight">Your weight is normal</string>
     <string name="normal_top_bar_result">Great!</string>
     <string name="your_bmi_prepend">Your BMI = </string>
