--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,29 @@
     <string name="unit_weight">Kg</string>
     <string name="unit_age">years</string>
     <string name="lbl_height">Height</string>
-    <string name="advice_stay_active">Stay active</string>
-    <string name="advice_healthy_diet">Choose a healthy diet</string>
-    <string name="advice_sufficient_sleep">Ensure you get sufficient sleep</string>
     <string name="result_more_info">More info</string>
     <string name="normal_result_maintain_message">To maintain your healthy weight:</string>
-    <string name="underweight_result_maintain_message">You need to eat more:</string>
+    <string name="underweight_result_maintain_title">Your result suggests you are</string>
+    <string name="underweight_result_maintain_subtitle">Underweight</string>
+    <string name="normal_result_maintain_subtitle">Normal weight</string>
+    <string name="overweight_result_maintain_subtitle">Overweight</string>
     <string name="normal_result_weight">Your weight is normal</string>
+    <string name="underweight_top_bar_result">Caution</string>
     <string name="normal_top_bar_result">Great!</string>
+    <string name="overweight_top_bar_result">Danger</string>
     <string name="your_bmi_prepend">Your BMI = </string>
     <string name="home_title">BMI</string>
+
+    <string name="underweight_result_advice_one_message">Eat more frequently.</string>
+    <string name="underweight_result_advice_two_message">Choose nutrient-rich foods.</string>
+    <string name="underweight_result_advice_three_message">Make every bite count.</string>
+
+    <string name="normal_result_advice_one_message">Stay active.</string>
+    <string name="normal_result_advice_two_message">Choose a healthy diet.</string>
+    <string name="normal_result_advice_three_message">Ensure you get sufficient sleep.</string>
+
+    <string name="overweight_result_advice_one_message">Consume less “bad” fat and more “good” fat.</string>
+    <string name="overweight_result_advice_two_message">Consume less processed and sugary foods.</string>
+    <string name="overweight_result_advice_three_message">Engage in regular aerobic activity.</string>
+
 </resources>
